# libpampa

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Doxyfile  README.md  azure-pipelines.yml  file.h  test.c
docs/html/: annotated.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  graph_legend.html  index.html  menudata.js
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  typedefs_3.js  variables_0.js  (+7 more)
docs/latex/: annotated.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  refman.tex
examples/: CMakeLists.txt  Makefile  example.c  files.c  memory.c
examples/array_lists/: CMakeLists.txt  main.c
examples/patching_memory/: CMakeLists.txt  main.c
examples/string_lists/: CMakeLists.txt  main.c
examples/using_files/: CMakeLists.txt  main.c
examples/using_images/: CMakeLists.txt  main.c
examples/using_lists/: CMakeLists.txt  main.c
include/: file.h  image.h  list.h  log.h  memory.h  types.h
samples/: Makefile  sample.c
tests/: CMakeLists.txt  test_all.c  test_file.c  test_memory.c
(+71 files in other folders)
